开放社区综合景区管理功能按钮以及图表数据请求异常处理

--- a/Lingang.City.Brain/Lingang.City.Brain.csproj
+++ b/Lingang.City.Brain/Lingang.City.Brain.csproj
@@ -643,6 +643,7 @@
     <Content Include="Content\images\ykhx-3.png" />
     <Content Include="Content\images\ykhx-4.png" />
     <Content Include="Content\images\yqsjlb-1.png" />
+    <Content Include="Content\images\yqsjlb-default.png" />
     <Content Include="Content\images\yqsjlb.png" />
     <Content Include="Content\images\yqyj-hart-warn-icon1.png" />
     <Content Include="Content\images\yqyj-hart-warn-icon2.png" />
