--- a/Lingang.City.Brain/Web.config
+++ b/Lingang.City.Brain/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   有关如何配置 ASP.NET 应用程序的详细信息，请访问
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -97,7 +97,12 @@
     <staticContent>
       <remove fileExtension=".til" />
     </staticContent>
-  <validation validateIntegratedModeConfiguration="false" /></system.webServer>
+  <validation validateIntegratedModeConfiguration="false" />
+        <defaultDocument>
+            <files>
+                <add value="index" />
+            </files>
+        </defaultDocument></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
