- add some js file for control desk.

--- a/Lingang.City.Brain/Lingang.City.Brain.csproj
+++ b/Lingang.City.Brain/Lingang.City.Brain.csproj
@@ -796,6 +796,7 @@
     <Content Include="Scripts\Ajax\Industry\e_EchartAjax.js" />
     <Content Include="Scripts\Ajax\Industry\gl_GardenBuildingAjax.js" />
     <Content Include="Scripts\Ajax\Industry\g_EchartAjax.js" />
+    <Content Include="Scripts\Ajax\IPadPcControlAjax.js" />
     <Content Include="Scripts\Ajax\Society\s_EchartAjax.js" />
     <Content Include="Scripts\Ajax\Society\s_LayerMenuAjax.js" />
     <Content Include="Scripts\Ajax\Tour\t_EchartAjax.js" />
