园区代表企业飞行操作

--- a/Lingang.City.Brain/Lingang.City.Brain.csproj
+++ b/Lingang.City.Brain/Lingang.City.Brain.csproj
@@ -551,6 +551,7 @@
     <Content Include="Content\images\cy-qy-div-icon2.png" />
     <Content Include="Content\images\cy-qy-div-icon3.png" />
     <Content Include="Content\images\cy-qy-div-icon4.gif" />
+    <Content Include="Content\images\cy-qy-jrlc-enter.png" />
     <Content Include="Content\images\cy-qy-jrlc.png" />
     <Content Include="Content\images\cy-qy-menu-close.png" />
     <Content Include="Content\images\cy-qy-nav1-hover.png" />
