--- a/Lingang.City.Brain/Lingang.City.Brain.csproj
+++ b/Lingang.City.Brain/Lingang.City.Brain.csproj
@@ -599,6 +599,7 @@
     <Content Include="Content\images\nav-rightbgicon.png" />
     <Content Include="Content\images\night-scene.png" />
     <Content Include="Content\images\personCardIMG.jpg" />
+    <Content Include="Content\images\personCardIMG.png" />
     <Content Include="Content\images\pj-3d.png" />
     <Content Include="Content\images\pj-3d2.png" />
     <Content Include="Content\images\pj-bshadow.png" />
