--- a/Lingang.City.Brain/Lingang.City.Brain.csproj
+++ b/Lingang.City.Brain/Lingang.City.Brain.csproj
@@ -811,10 +811,10 @@
     <Content Include="Scripts\Data\Industry\g_UnmannedCarData.js" />
     <Content Include="Scripts\Data\Industry\e_LayerMenuData.js" />
     <Content Include="Scripts\Data\Industry\g_EchartData.js" />
+    <Content Include="Scripts\Data\IPadPcControlData.js" />
     <Content Include="Scripts\Data\Society\s_EchartData.js" />
     <Content Include="Scripts\Data\Society\s_LayerMenuData.js" />
     <Content Include="Scripts\Data\Society\s_MainData.js" />
-    <Content Include="Scripts\Data\Test\SpecialEfficiencyData.js" />
     <Content Include="Scripts\Data\Tour\t_EchartData.js" />
     <Content Include="Scripts\Data\Tour\t_LayerMenuData.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
