--- a/Lingang.City.Brain/Lingang.City.Brain.csproj
+++ b/Lingang.City.Brain/Lingang.City.Brain.csproj
@@ -873,7 +873,9 @@
     <Content Include="Scripts\Modules\MainMenu.js" />
     <Content Include="Scripts\Modules\Society\sl_Drone.js" />
     <Content Include="Scripts\Modules\Society\sl_Event.js" />
+    <Content Include="Scripts\Modules\Society\sl_Grid.js" />
     <Content Include="Scripts\Modules\Society\sl_SeaboardLine.js" />
+    <Content Include="Scripts\Modules\Society\sl_Street.js" />
     <Content Include="Scripts\Modules\Society\sl_WorkSite.js" />
     <Content Include="Scripts\Modules\Society\sl_WorkStation.js" />
     <Content Include="Scripts\Modules\Society\s_Echart.js" />
@@ -1088,13 +1090,25 @@
     <Content Include="View\SocietyNew\Left_Second_EventDrone1.html" />
     <Content Include="View\SocietyNew\Left_Second_EventDrone2.html" />
     <Content Include="View\SocietyNew\Left_Second_EventDrone3.html" />
+    <Content Include="View\SocietyNew\Left_Second_EventGrid1.html" />
+    <Content Include="View\SocietyNew\Left_Second_EventGrid2.html" />
+    <Content Include="View\SocietyNew\Left_Second_EventGrid3.html" />
     <Content Include="View\SocietyNew\Left_Second_EventIOT.html" />
     <Content Include="View\SocietyNew\Left_Second_EventIOT1.html" />
     <Content Include="View\SocietyNew\Left_Second_EventIOT2.html" />
     <Content Include="View\SocietyNew\Left_Second_EventIOT3.html" />
     <Content Include="View\SocietyNew\Left_Second_EventIOT4.html" />
     <Content Include="View\SocietyNew\Left_Second_EventSeaBoard.html" />
-    <Content Include="View\SocietyNew\Left_Second_EventWorkSite.html" />
+    <Content Include="View\SocietyNew\Left_Second_EventSeaBoard1.html" />
+    <Content Include="View\SocietyNew\Left_Second_EventSeaBoard2.html" />
+    <Content Include="View\SocietyNew\Left_Second_EventSeaBoard3.html" />
+    <Content Include="View\SocietyNew\Left_Second_EventStreet1.html" />
+    <Content Include="View\SocietyNew\Left_Second_EventStreet2.html" />
+    <Content Include="View\SocietyNew\Left_Second_EventStreet3.html" />
+    <Content Include="View\SocietyNew\Left_Second_EventWorkSite1.html" />
+    <Content Include="View\SocietyNew\Left_Second_EventWorkSite2.html" />
+    <Content Include="View\SocietyNew\Left_Second_EventWorkSite3.html" />
+    <Content Include="View\SocietyNew\Left_Second_EventWorkSite4.html" />
     <Content Include="View\SocietyNew\Left_Second_EventWorkStation.html" />
     <Content Include="View\SocietyNew\Right_Second_01.html" />
     <Content Include="View\SocietyNew\Right_Second_02.html" />
