--- a/Lingang.City.Brain/Lingang.City.Brain.csproj
+++ b/Lingang.City.Brain/Lingang.City.Brain.csproj
@@ -1075,6 +1075,7 @@
     <Content Include="View\SocietyNew\Bottom_EventDetail.html" />
     <Content Include="View\SocietyNew\Bottom_EventDetailPic.html" />
     <Content Include="View\SocietyNew\Bottom_EventPaidan.html" />
+    <Content Include="View\SocietyNew\Bottom_IOTDetail.html" />
     <Content Include="View\SocietyNew\Bottom_Menu.html" />
     <Content Include="View\SocietyNew\Center_01.html" />
     <Content Include="View\SocietyNew\Center_01_Info.html" />
