--- a/Lingang.City.Brain/Lingang.City.Brain.csproj
+++ b/Lingang.City.Brain/Lingang.City.Brain.csproj
@@ -1095,6 +1095,7 @@
     <Content Include="View\SocietyNew\Bottom_EventPaidan.html" />
     <Content Include="View\SocietyNew\Bottom_IOTDetail.html" />
     <Content Include="View\SocietyNew\Bottom_Menu.html" />
+    <Content Include="View\SocietyNew\Bottom_WorkStationDetail.html" />
     <Content Include="View\SocietyNew\Center_01.html" />
     <Content Include="View\SocietyNew\Center_01_Info.html" />
     <Content Include="View\Industry\Estate\Center_03.html" />
