园区点击右侧事件统计列表出来事件详情窗口

--- a/Lingang.City.Brain/Lingang.City.Brain.csproj
+++ b/Lingang.City.Brain/Lingang.City.Brain.csproj
@@ -1070,6 +1070,7 @@
     <Content Include="View\Industry\Estate\Right_Second_01.html" />
     <Content Include="View\Industry\Estate\Right_Second_02.html" />
     <Content Include="View\Industry\Garden\Center_02.html" />
+    <Content Include="View\Industry\Garden\Center_EventDetail.html" />
     <Content Include="View\Industry\Garden\CompanyStatistic.html" />
     <Content Include="View\Industry\Garden\ParkingLotDetail.html" />
     <Content Include="View\Industry\Garden\UnmannedCarDetail.html" />
