--- a/Lingang.City.Brain/Lingang.City.Brain.csproj
+++ b/Lingang.City.Brain/Lingang.City.Brain.csproj
@@ -915,8 +915,10 @@
     <Content Include="Scripts\Modules\Tour\tl_VisitorsMap.js" />
     <Content Include="Scripts\Modules\Tour\t_EchartNew.js" />
     <Content Include="Scripts\Modules\Tour\t_MainNew.js" />
+    <Content Include="Scripts\Qmap\pep.min.js" />
     <Content Include="Scripts\Qmap\QMap3d-2.0.min.js" />
     <Content Include="Scripts\Qmap\QMap3d-src.js" />
+    <Content Include="Scripts\Qmap\QMap3d-src备份.js" />
     <Content Include="Scripts\Qmap\QMap3dV2.3-custom.js" />
     <Content Include="Scripts\Qmap\QMapV2.Business.V2026.js" />
     <Content Include="Scripts\r.js" />
@@ -1064,12 +1066,14 @@
     <Content Include="View\Industry\Estate\Left_Second_01.html" />
     <Content Include="View\Industry\Estate\Left_Second_02.html" />
     <Content Include="View\Industry\Estate\Left_Second_03.html" />
+    <Content Include="View\Industry\Estate\ParkDetail.html" />
     <Content Include="View\Industry\Estate\Right_First_01.html" />
     <Content Include="View\Industry\Estate\Right_First_02.html" />
     <Content Include="View\Industry\Estate\Right_First_03.html" />
     <Content Include="View\Industry\Estate\Right_Second_01.html" />
     <Content Include="View\Industry\Estate\Right_Second_02.html" />
     <Content Include="View\Industry\Garden\Center_02.html" />
+    <Content Include="View\Industry\Garden\Center_EventDetail.html" />
     <Content Include="View\Industry\Garden\CompanyStatistic.html" />
     <Content Include="View\Industry\Garden\ParkingLotDetail.html" />
     <Content Include="View\Industry\Garden\UnmannedCarDetail.html" />
@@ -1142,6 +1146,7 @@
     <Content Include="View\TourNew\Center_01.html" />
     <Content Include="View\TourNew\Center_02.html" />
     <Content Include="View\TourNew\Center_03.html" />
+    <Content Include="View\TourNew\Center_04.html" />
     <Content Include="View\TourNew\Center_EventDetail.html" />
     <Content Include="View\TourNew\Left_First_01.html" />
     <Content Include="View\TourNew\Left_First_02.html" />
