--- a/Lingang.City.Brain/Lingang.City.Brain.csproj
+++ b/Lingang.City.Brain/Lingang.City.Brain.csproj
@@ -909,6 +909,7 @@
     <Content Include="Scripts\Modules\Tour\tl_StreamCalculate.js" />
     <Content Include="Scripts\Modules\Tour\tl_StreamCalculateNew.js" />
     <Content Include="Scripts\Modules\Tour\tl_TrafficSimulation.js" />
+    <Content Include="Scripts\Modules\Tour\tl_VisitorsMapNew.js" />
     <Content Include="Scripts\Modules\Tour\t_Home_S.js" />
     <Content Include="Scripts\Modules\Tour\t_Home_D.js" />
     <Content Include="Scripts\Modules\Tour\tl_RoadCondition.js" />
