社综--社区车辆图表及下面的摄像头车辆识别更改

--- a/Lingang.City.Brain/Lingang.City.Brain.csproj
+++ b/Lingang.City.Brain/Lingang.City.Brain.csproj
@@ -604,6 +604,7 @@
     <Content Include="Content\images\person-pic.png" />
     <Content Include="Content\images\personCardIMG.jpg" />
     <Content Include="Content\images\personCardIMG.png" />
+    <Content Include="Content\images\pic-car.png" />
     <Content Include="Content\images\pj-3d.png" />
     <Content Include="Content\images\pj-3d2.png" />
     <Content Include="Content\images\pj-bshadow.png" />
