社综--无人机，社区人口，事件信息更新

--- a/Lingang.City.Brain/Lingang.City.Brain.csproj
+++ b/Lingang.City.Brain/Lingang.City.Brain.csproj
@@ -624,6 +624,7 @@
     <Content Include="Content\images\sj-div2.png" />
     <Content Include="Content\images\sj-div3.png" />
     <Content Include="Content\images\sj-div4.png" />
+    <Content Include="Content\images\sj-div5.png" />
     <Content Include="Content\images\sj.png" />
     <Content Include="Content\images\sqcl-chartbg.png" />
     <Content Include="Content\images\sqrk_icon1.png" />
