- different from touch control in control desk and mouse control in big screen.

--- a/Lingang.City.Brain/Lingang.City.Brain.csproj
+++ b/Lingang.City.Brain/Lingang.City.Brain.csproj
@@ -936,6 +936,7 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\Shared\DataCache.js" />
     <Content Include="Scripts\Shared\Main_D.js" />
+    <Content Include="Scripts\Shared\Map_D.js" />
     <Content Include="Scripts\Shared\SignalRHub.js" />
     <Content Include="Scripts\text.js" />
     <Content Include="Scripts\Shared\Cookie.js" />
@@ -1024,7 +1025,7 @@
     <Content Include="Scripts\Tools\jquery.nicescroll.js" />
     <Content Include="Scripts\Shared\Load.js" />
     <Content Include="Scripts\Shared\Main_S.js" />
-    <Content Include="Scripts\Shared\Map.js" />
+    <Content Include="Scripts\Shared\Map_S.js" />
     <Content Include="Scripts\Shared\MouseEvent.js" />
     <Content Include="Scripts\Shared\Reset.js" />
     <Content Include="Scripts\Tools\util.js" />
