--- a/Lingang.City.Brain/Lingang.City.Brain.csproj
+++ b/Lingang.City.Brain/Lingang.City.Brain.csproj
@@ -1160,6 +1160,7 @@
     <Content Include="View\TourNew\Center_02.html" />
     <Content Include="View\TourNew\Center_03.html" />
     <Content Include="View\TourNew\Center_04.html" />
+    <Content Include="View\TourNew\Center_BusStopDetail.html" />
     <Content Include="View\TourNew\Center_EventDetail.html" />
     <Content Include="View\TourNew\Left_First_01.html" />
     <Content Include="View\TourNew\Left_First_02.html" />
