工地数据请求，详情，园区企业变化趋势展示，战略新兴结构产业隐藏，两者兑换位置，中台人员分布方法注释

--- a/Lingang.City.Brain/Lingang.City.Brain.csproj
+++ b/Lingang.City.Brain/Lingang.City.Brain.csproj
@@ -1149,6 +1149,7 @@
     <Content Include="View\SocietyNew\Left_Second_EventWorkSite3.html" />
     <Content Include="View\SocietyNew\Left_Second_EventWorkSite4.html" />
     <Content Include="View\SocietyNew\Left_Second_EventWorkStation.html" />
+    <Content Include="View\SocietyNew\WorkSiteDetail.html" />
     <Content Include="View\SocietyNew\Right_Second_01.html" />
     <Content Include="View\SocietyNew\Right_Second_02.html" />
     <Content Include="View\SocietyNew\Right_Second_03.html" />
