--- a/Lingang.City.Brain/Lingang.City.Brain.csproj
+++ b/Lingang.City.Brain/Lingang.City.Brain.csproj
@@ -1086,6 +1086,7 @@
     <Content Include="View\Industry\Garden\Center_02.html" />
     <Content Include="View\Industry\Garden\Center_EventDetail.html" />
     <Content Include="View\Industry\Garden\CompanyStatistic.html" />
+    <Content Include="View\Industry\Garden\ParkDetail.html" />
     <Content Include="View\Industry\Garden\ParkingLotDetail.html" />
     <Content Include="View\Industry\Garden\UnmannedCarDetail.html" />
     <Content Include="View\Industry\Garden\TopCompanyInfo.html" />
